--- a/public/css/EventListing.css
+++ b/public/css/EventListing.css
@@ -17,8 +17,8 @@
   border-radius: 12px;
   padding: 2rem;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-  max-width: 1200px;
-  margin-top: 90px; /* Center the container */
+  max-width: 75%;
+  /* margin-top: 90px; Center the container */
   margin-left: auto;
   margin-right: auto;
   z-index: 0;
@@ -30,7 +30,7 @@
   .container {
     padding: 1.5rem;
     max-width: 900px;
-    margin-top: 100px;
+    /* margin-top: 100px; */
   }
 }
 
@@ -75,7 +75,7 @@
 
 .event-title {
   font-size: 1.2rem;
-  font-weight: 600;
+  font-weight: bold;
   color: #333;
   margin-bottom: 8px;
 }
@@ -138,7 +138,7 @@
 
 .event-no-events {
   text-align: center;
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   color: #555;
   margin-top: 50px; /* Space above the message */
 }
